--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <main>
         <div class="flex flex-col py-8 px-7 items-center gap-6 fundo">
             <h2 class="font">Manuella Penha da Silva</h2>
-            <img src="/img/manu.jpg" class="manu" />
+            <img src="img\manu.jpg" class="manu" />
 
             <p class="sm:px-7 sobre-mim">Tenho 22 anos e sou graduada em Biomedicina pela Universidade Estácio,
                 onde desenvolvi uma base sólida em ciências da saúde.</p>
@@ -67,7 +67,7 @@
 
         <div class="flex flex-col py-8 px-7 items-center gap-6 fundo" id="sobre">
             <h2 class="font">Clínica MP</h2>
-            <img src="/img/clinica-estetica-biomedicina-enquadramento.jpg" />
+            <img src="img\clinica-estetica-biomedicina-enquadramento.jpg" />
             <p class="sm:px-5 sobre">Temos o privilégio de contar com um dos melhores profissionais do estado do
                 Rio de
                 Janeiro,
